Create Dialog Box for parameters

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,7 +22,7 @@
                 <group id="DesignPattern.Generator.MainMenu" text="Design Pattern Generator"
                        description="Design pattern generator">
                     <add-to-group group-id="MainMenu" anchor="last"/>
-                    <action class="com.samujjwaal.designpatternplugin.GetUserInput" id="Get.User.Input"
+                    <action class="com.samujjwaal.designpatternplugin.DPDialogWrapper" id="Get.User.Input"
                             text="Choose Design Pattern" />
                     <separator/>
                     <action class="com.samujjwaal.designpatternplugin.OpenGitHub" id="GitHub.Actions.OpenProject"
