--- a/build.gradle
+++ b/build.gradle
@@ -13,18 +13,26 @@ repositories {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
 
     // https://mvnrepository.com/artifact/com.squareup/javapoet
     compile group: 'com.squareup', name: 'javapoet', version: '1.12.1'
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile (group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'){
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        // OR
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    }
+
+
+
     // https://mvnrepository.com/artifact/com.typesafe/config
     compile group: 'com.typesafe', name: 'config', version: '1.4.0'
-
-
-
+    
+}
+test {
+    useJUnitPlatform()
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
