--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -1,24 +1,24 @@
 {
   iterations = [
     {
-      designPatternChoice = "2"
+      designPatternChoice = "2"              //for Abstract Factory Method design pattern
       classes = ["Processor", "Intel", "AMD",
       "OperatingSystem", "OS", "ChromeOS", "Ubuntu",
       "LaptopFactory", "ChromeBookFactory","LinuxLaptopFactory"]
       packageName = "com.laptopAbstractFactory"
     },
     {
-      designPatternChoice = "9"
+      designPatternChoice = "9"              //for Decorator design pattern
       classes = ["Beverage","Coffee","CondimentDecorator","Milk","WhipCream"]
       packageName = "com.coffeeDecorator"
     },
     {
-      designPatternChoice = "6"
+      designPatternChoice = "6"              //for Adapter design pattern
       classes = ["TypeC", "MicroUSB","USBDongle"]
       packageName = "com.usbAdapter"
     },
     {
-      designPatternChoice = "19"
+      designPatternChoice = "19"              //for Observer design pattern
       classes = ["SmartPhone", "WeatherServiceServer","DarkSkyServer","AndroidPhone"]
       packageName = "com.weatherObserver"
     }]
