Updated Readme, added screenshots

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -3,7 +3,7 @@
     {
       designPatternChoice = "2"              //for Abstract Factory Method design pattern
       classes = ["Processor", "Intel", "AMD",
-      "OperatingSystem", "OS", "ChromeOS", "Ubuntu",
+      "OperatingSystem", "ChromeOS", "Ubuntu",
       "LaptopFactory", "ChromeBookFactory","LinuxLaptopFactory"]
       packageName = "com.laptopAbstractFactory"
     },
